Add assertions to important code logic
- Assert non-null input in Parser.parse
- Assert TaskList and Storage invariants
- Improve detection of programmer logic error if code is modified in
  later iterations

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ checkstyle {
 }
 
 shadowJar {
-    archiveBaseName = "raisinChat"
+    archiveBaseName = "RaisinChat"
     archiveClassifier = null
 }
 
